# Scalp2

./: .env.example  .gitignore  CLAUDE.md  config.yaml  create_diagnostic_notebook.py  cycle_history.csv  diag_hmm.py  diag_metrics.txt  diag_out.txt  diag_out2.txt  diag_output.txt  diff.txt  diff_sm.txt  git_log.txt  gitlog.txt  hmm_src.py  hmm_src.txt  hmmlearn_stats_density.py  implementation_plan.md  kumes_api.py  nb_dump.py  patch_diag.py  patch_diag_2.py  patch_nb.py  patch_nb06.py  patch_plot.py  protection_state.json  pyproject.toml  rebuild_nb06_yield.py  regime_online_statsyeni.json  requirements.txt  risk_state.json
.claude/commands/: analyze.md  bias-check.md  pipeline.md  push.md
deploy/: scalp2.service  setup_vps.sh
notebooks/: 01_data_prep.ipynb  02_feature_engineering.ipynb  03_labeling.ipynb  04_train_stage1.ipynb  05.1_model_diagnostics.ipynb  05.2_stage1_isolation.ipynb  05.3_feature_forensics.ipynb  05.4_checkpoint_diagnostics.ipynb  05_train_stage2.ipynb  06_backtest.ipynb  07_backtest_optimization.ipynb  07_live_inference.ipynb  _patch_notebook.py
scalp2/: __init__.py  config.py
scalp2/analysis/: backtest_engine.py
scalp2/data/: dataset.py  downloader.py  mtf_builder.py  preprocessing.py
scalp2/execution/: risk_manager.py  signal_generator.py  strategy_logic.py  trade_manager.py
scalp2/features/: builder.py  orderflow.py  smart_money.py  technical.py  volatility.py  wavelet.py
scalp2/labeling/: triple_barrier.py
scalp2/live/: __init__.py  bot.py  (+5 more)
tests/: test_backtest_engine.py  test_metrics.py  test_paper_mode.py  test_regime.py
(+19 files in other folders)
