[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scalp2"
version = "0.1.0"
description = "Production-grade BTC/USDT HFT Scalping Framework"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "xgboost>=2.0.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.11.0",
    "ccxt>=4.0.0",
    "aiohttp>=3.9.0",
    "pyarrow>=14.0.0",
    "PyWavelets>=1.5.0",
    "hmmlearn>=0.3.0",
    "scikit-learn>=1.3.0",
    "numba>=0.58.0",
    "pyyaml>=6.0",
    "tensorboard>=2.15.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
notebooks = ["ipywidgets>=8.0.0", "matplotlib>=3.8.0", "seaborn>=0.13.0"]

[tool.setuptools.packages.find]
include = ["scalp2*"]
